paging arrows are now hidden when appropriate, video is now left aligned, added a progress indicator for when video loads, created play/pauze button auto-toggle, fixed the support for Devoxx09 talks, fixed bug with NO_SLIDES presentation type, set server to www.parleys.com, agenda buttons are now fully clickable, corrected slide URLs for Devoxx09 talks, fixed bug when video ends and user presses play,

--- a/web-ipad/src/main/webapp/resources/parleys/parleysIpad.css
+++ b/web-ipad/src/main/webapp/resources/parleys/parleysIpad.css
@@ -357,7 +357,15 @@ div.pagingBar a.next.paging {
     /*border: 1px solid red;*/
 }
 
-/*.videoPlayer {*/
+#videoLoader {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
+}
+
+/*#videoPlayer {*/
     /*display: inline-block;*/
 /*}*/
 
@@ -508,7 +516,7 @@ div#agenda li a {
     color: #174867;
 
     -webkit-border-radius: 10px;
-    width: 250px;
+    w/idth: 250px;
     display: block;
     text-decoration: none;
 }
